--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+.title {
+  padding: 10px;
+  margin: 15px 0;
   text-align: center;
+  font-size: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  min-height: 20vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+form input,
+form button {
+  padding: 0.5rem;
+  border: none;
+  background: #fff;  
+  color: black;
+  outline-style: none;
+  margin: 0 -1px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form button {
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+form button:hover {
+  background: rgb(26, 26, 31);
+  color: #fff;
+}
+
+.select {
+  margin-left: 2rem;
+}
+
+.filter-todo {
+  padding: 0.5rem;
 }
