--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
+  background: rgb(26, 26, 31);
+  color: #fff;
+  font-size: 18px;
+  font-family: 'Quicksand', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
