--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,18 @@
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .title {
-  padding: 10px;
+  padding: 8px;
   margin: 15px 0;
   text-align: center;
   font-size: 2rem;
 }
 
 form {
-  min-height: 20vh;
+  min-height: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,7 +24,12 @@ form input, form button {
   background: #fff;
   color: black;
   outline-style: none;
-  margin: 0 -1px;
+  border-radius: 0;
+}
+
+form input {
+  max-width: 300px;
+  width: 30%;
 }
 
 form button {
@@ -37,9 +48,67 @@ form button:active {
 }
 
 .select {
-  margin-left: 2rem;
+  margin-left: 1.5rem;
 }
 
 .filter-todo {
   padding: 0.5rem;
+  outline: none;
+  cursor: pointer;
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.todo-list {  
+  list-style: none;
+  width: 35%;
+}
+
+.todo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5rem; 
+  background: #fff;
+  color: #000;
+  padding: 0.1rem;
+  cursor: pointer;
+}
+
+.todo__item {
+  background: #fff;
+  color: #000;
+  padding: 0 0.3rem;
+  overflow: hidden;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+.todo__trash-btn {
+  padding: 0.4rem;
+  border: none;
+  background: #fff;
+  color: rgb(255, 0, 0);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 0;
+  outline: none;
+}
+
+.todo__trash-btn:hover {
+  background: rgb(209, 25, 25);
+  color: #fff;
+}
+
+.todo__trash-btn:active {
+  background: rgb(226, 77, 77);
+  color: #fff;
 }
